--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^1.0",
         "league/csv": "^9.0",
         "maatwebsite/excel": "^3.1",
+        "staudenmeir/eloquent-has-many-deep": "^1.7",
         "zendframework/zend-soap": "^2.8"
     },
     "require-dev": {
