--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "league/csv": "^9.0",
         "maatwebsite/excel": "^3.1",
-        "staudenmeir/eloquent-has-many-deep": "^1.7",
+        "staudenmeir/eloquent-has-many-deep": "^1.11",
         "zendframework/zend-soap": "^2.8"
     },
     "require-dev": {
