Now support new Yrkesprognoser

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ APP_URL=http://localhost
 
 JOBTECH_API_KEY=
 
+IPF_CLIENT_ID=
+IPF_CLIENT_SECRET=
+
+AF_ENV=T2
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
